# bipartite

./: .gitignore  CLAUDE.md  CONSTITUTION.md  CONTINUATION.md  CONTRIBUTORS.md  LICENSE  Makefile  PROSE-DISCIPLINE.md  README.md  SUBAGENT-SCAN.md  VISION.md  go.mod  go.sum  mkdocs.yml  pyproject.toml  relationship-types.json
.claude/commands/: bip.board.md  bip.checkin.md  bip.digest.md  flowc.board.md  flowc.checkin.md  flowc.digest.md  flowc.spawn.md  flowc.tree.md
.github/workflows/: ci.yml  docs.yml
.specify/memory/: constitution.md
agents/: clean-code-reviewer.md  code-reuse-reviewer.md  issue-lead.md  journal-submission-checker.md  math-pr-summarizer.md  nextflow-pipeline-expert.md  pdf-proof-reader.md  pdf-question-answerer.md  plot-reviewer.md  scientific-tex-editor.md  snakemake-pipeline-expert.md  surprising-conclusion-skeptic.md  tex-grammar-checker.md  tex-verb-tense-checker.md  topic-sentence-stickler.md  zig-code-reviewer.md
cmd/bip/: asta.go  asta_author.go  asta_author_papers.go  asta_citations.go  asta_paper.go  asta_references.go  asta_search.go  asta_snippet.go  diff.go  (+78 more)
docs/: index.md
fc_cli/: issue.py  llm.py  main.py  slack.py
flowc/: __init__.py  issue.py  llm.py  main.py  slack.py
schemas/: relationship-types.json
scripts/: marimo-check.sh
statusline/: ctx_monitor.js
testdata/: paperpile_sample.json  zotero_csl_sample.json
tests/: test_activity.py  test_config.py  test_digest.py  test_issue.py  test_llm.py  test_slack.py
tests_fc/: test_activity.py  test_config.py  test_digest.py  test_issue.py  test_llm.py  test_slack.py
(+512 files in other folders)
